# keycloak-rest-services

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  groups.bak  mkdocs.yml  pyproject.toml  pytest.ini  requirements-actions.txt  requirements-tests.txt  requirements.txt  run_k8s.py  run_local.sh  setup.cfg  setup.py  setupenv.sh  test.py
.circleci/: config.yml
.github/workflows/: codeql.yml  docker.yaml  docs.yml  wipac_cicd.yaml
actions/: create_email_account.py  create_home_directory.py  create_posix_account.py  create_user_directory.py  create_user_directory_ssh.py  deprovision_mailing_lists.py  ldap_password_exp_email.py  prune_mail_groups_by_experiment.py  prune_mailing_lists_by_experiment.py  sync_authors_mail_group.py  sync_composite_groups.py  sync_group_members.py  sync_group_membership.py  sync_gws_accounts.py  sync_gws_calendars.py  sync_gws_mailing_lists.py  sync_gws_users.py  sync_icecube-c_mail_group.py  sync_ldap_groups.py  sync_synchronized_groups.py  track_user_institutions.py  update_institutionless_users.py  update_ldap_shadow_expire.py  update_user_institutions.py  util.py
custom-jars/: build.sh
custom-jars/scitokens/: scitokens-mapper.js
docs/: README.md  admin_groups.md  admin_insts.md  group_join.md  group_leave.md  index.md  inst_join.md  inst_leave.md  inst_move.md  new_user.md  pwd_reset.md  user_login.md  user_profile.md
docs/stylesheets/: extra.css
keycloak_setup/: icecube_authorlist.py  icecube_ldap.py  icecube_setup.py  institution_list.py
keycloak_theme/account/: account.ftl  theme.properties
keycloak_theme/account/resources/css/: account.css
keycloak_theme/login/: README  template.ftl  theme.properties
keycloak_theme/login/messages/: messages_ca.properties  messages_cs.properties  messages_da.properties  messages_de.properties  messages_en.properties  messages_es.properties  messages_fr.properties  messages_hu.properties  messages_it.properties  messages_ja.properties  messages_lt.properties  messages_nl.properties  messages_no.properties  messages_pl.properties  messages_pt_BR.properties  messages_ru.properties  messages_sk.properties  messages_sv.properties  messages_tr.properties  messages_zh_CN.properties
keycloak_theme/login/resources/css/: login.css
krs/: __init__.py  apps.py  bootstrap.py  email.py  groups.py  institutions.py  ldap.py  rabbitmq.py  token.py  users.py  util.py
resources/: icecube_setup.py  pytest-env.sh  start-keycloak.sh  start-ldap.sh  start-rabbitmq.sh  test-master-realm.json  user_stories.md
resources/keycloak-image/: Dockerfile
resources/ldap-image/: Dockerfile
resources/ldap-ldifs/: icecube.ldif
scripts/: get_group_member_emails.py
tests/: test_apps.py  test_bootstrap.py  test_groups.py  test_users.py  util.py
tests/actions/: test_create_email_account.py  test_create_home_directory.py  test_create_posix_account.py  test_create_user_directory.py  test_create_user_directory_ssh.py  test_deprovision_mailing_lists.py  test_ldap_password_exp_email.py  test_prune_mail_groups_by_experiment.py  test_prune_mailing_lists_by_experiment.py  test_sync_authors_mail_group.py  test_sync_composite_groups.py  test_sync_group_membership.py  test_sync_gws_accounts.py  test_sync_gws_calendars.py  test_sync_gws_mailing_lists.py  test_sync_ldap_groups.py  test_sync_synchronized_groups.py  test_track_user_institutions.py  test_update_institutionless_users.py  test_update_user_institutions.py  test_util.py  util.py
tests/krs/: test_apps.py  test_bootstrap.py  test_email.py  test_groups.py  test_institutions.py  test_ldap.py  test_users.py  test_util.py
tests/user_mgmt/: test_api_groups.py  test_api_insts.py  test_api_users.py  test_cache.py  util.py
user_mgmt/: __init__.py  __main__.py  cache.py  group_mgmt.py  groups.py  handler.py  insts.py  server.py  user_registration.py  users.py
user_mgmt/static/: boilerplate.css  boilerplate.js  index.html  main.css  main.js
