[project]
version = "1.4.117"
dependencies = [
    "aio_pika",
    "attrs",
    "ldap3",
    "motor",
    "requests",
    "unidecode",
    "wipac-dev-tools",
    "wipac-rest-tools",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "flake8",
]
actions = [
    "asyncache",
    "google-api-python-client",
    "google-auth-oauthlib",
    "jsonpath_ng",
]
