[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["aio_pika", "attrs", "ldap3", "motor", "requests", "unidecode", "wipac-dev-tools", "wipac-rest-tools"]
name = "wipac-keycloak-rest-services"
description = "Services surrounding KeyCloak, that use the REST API to read/update state"
readme = "README.md"
keywords = ["WIPAC", "rest tools", "utilities"]
classifiers = ["Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13"]
requires-python = ">=3.10, <3.14"

[[project.authors]]
name = "WIPAC Developers"
email = "developers@icecube.wisc.edu"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "coverage", "flake8"]
actions = ["asyncache", "google-api-python-client", "google-auth-oauthlib", "jsonpath_ng"]

[project.urls]
Homepage = "https://pypi.org/project/wipac-keycloak-rest-services/"
Tracker = "https://github.com/WIPACrepo/keycloak-rest-services/issues"
Source = "https://github.com/WIPACrepo/keycloak-rest-services"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
include = ["krs", "krs.*"]
