[wipac:cicd_setup_builder]
pypi_name = wipac-keycloak-rest-services
python_min = 3.8
package_paths = krs
keywords_spaced = keycloak rest tools utilities

[options]
install_requires =
    requests
    pyjwt[crypto]
    motor
    unidecode
    ldap3
    aio_pika
    cachetools
    wipac-rest-tools

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    coverage
    flake8

[coverage:run]
branch = True
parallel = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
omit =
    *__init__*
ignore_errors = True

[coverage:html]
directory = htmlcov

[flake8]
ignore=D403,E124,E128,E226,E302,E305,E501,W503,W504
exclude=env,tests


[semantic_release]
version_variable = __init__.py:__version__
upload_to_pypi = True
patch_without_tag = True
commit_parser = semantic_release.history.tag_parser
minor_tag = [minor]
fix_tag = [fix]
